generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum OrderType {
  delivery
  pickup
}

enum OrderStatus {
  pending
  confirmed
  preparing
  ready
  out_for_delivery
  delivered
  completed
  cancelled
}

model Category {
  id        String    @id @default(uuid()) @db.Uuid
  name      String
  createdAt DateTime  @default(now()) @map("created_at")

  products  Product[]

  @@map("categories")
}

model Product {
  id          String    @id @default(uuid()) @db.Uuid
  categoryId  String    @map("category_id") @db.Uuid
  name        String
  description String?
  price       Decimal   @db.Decimal(10, 2)
  imageUrl    String?   @map("image_url")
  isAvailable Boolean   @default(true) @map("is_available")
  createdAt   DateTime  @default(now()) @map("created_at")

  category    Category           @relation(fields: [categoryId], references: [id])
  modifiers   ProductModifier[]
  orderItems  OrderItem[]

  @@index([categoryId])
  @@map("products")
}

model ProductModifier {
  id        String  @id @default(uuid()) @db.Uuid
  productId String  @map("product_id") @db.Uuid
  name      String
  price     Decimal @default(0) @db.Decimal(10, 2)

  product   Product @relation(fields: [productId], references: [id])

  @@index([productId])
  @@map("product_modifiers")
}

model Customer {
  id           String   @id @default(uuid()) @db.Uuid
  firstName    String   @map("first_name")
  lastName     String   @map("last_name")
  email        String   @unique
  phone        String?
  passwordHash String   @map("password_hash")
  createdAt    DateTime @default(now()) @map("created_at")

  addresses     Address[]
  orders        Order[]
  notifications Notification[]

  @@map("customers")
}

model Address {
  id         String   @id @default(uuid()) @db.Uuid
  customerId String   @map("customer_id") @db.Uuid
  street     String
  city       String
  note       String?
  createdAt  DateTime @default(now()) @map("created_at")

  customer   Customer @relation(fields: [customerId], references: [id])
  orders     Order[]

  @@index([customerId])
  @@map("addresses")
}

model Order {
  id         String      @id @default(uuid()) @db.Uuid
  customerId String      @map("customer_id") @db.Uuid
  addressId  String?     @map("address_id") @db.Uuid
  orderType  OrderType   @map("order_type")
  status     OrderStatus @default(pending)
  total      Decimal     @db.Decimal(10, 2)
  createdAt  DateTime    @default(now()) @map("created_at")

  customer      Customer       @relation(fields: [customerId], references: [id])
  address       Address?       @relation(fields: [addressId], references: [id])
  items         OrderItem[]
  history       OrderHistory[]
  notifications Notification[]

  @@index([customerId])
  @@index([status])
  @@map("orders")
}

model OrderItem {
  id        String  @id @default(uuid()) @db.Uuid
  orderId   String  @map("order_id") @db.Uuid
  productId String  @map("product_id") @db.Uuid
  quantity  Int     @default(1)
  price     Decimal @db.Decimal(10, 2)

  order     Order                @relation(fields: [orderId], references: [id])
  product   Product              @relation(fields: [productId], references: [id])
  modifiers OrderItemModifier[]

  @@index([orderId])
  @@index([productId])
  @@map("order_items")
}

model OrderItemModifier {
  id          String  @id @default(uuid()) @db.Uuid
  orderItemId String  @map("order_item_id") @db.Uuid
  name        String
  price       Decimal @db.Decimal(10, 2)

  orderItem   OrderItem @relation(fields: [orderItemId], references: [id])

  @@index([orderItemId])
  @@map("order_item_modifiers")
}

model Employee {
  id           String   @id @default(uuid()) @db.Uuid
  firstName    String   @map("first_name")
  lastName     String   @map("last_name")
  email        String   @unique
  passwordHash String   @map("password_hash")
  createdAt    DateTime @default(now()) @map("created_at")

  history      OrderHistory[]

  @@map("employees")
}

model OrderHistory {
  id         String      @id @default(uuid()) @db.Uuid
  orderId    String      @map("order_id") @db.Uuid
  employeeId String?     @map("employee_id") @db.Uuid
  status     OrderStatus
  createdAt  DateTime    @default(now()) @map("created_at")

  order      Order      @relation(fields: [orderId], references: [id])
  employee   Employee?  @relation(fields: [employeeId], references: [id])

  @@index([orderId])
  @@map("order_history")
}

model Notification {
  id         String   @id @default(uuid()) @db.Uuid
  customerId String   @map("customer_id") @db.Uuid
  orderId    String   @map("order_id") @db.Uuid
  message    String
  isRead     Boolean  @default(false) @map("is_read")
  createdAt  DateTime @default(now()) @map("created_at")

  customer   Customer @relation(fields: [customerId], references: [id])
  order      Order    @relation(fields: [orderId], references: [id])

  @@index([customerId])
  @@map("notifications")
}
